--- a/xbrl_us_api.ipynb
+++ b/xbrl_us_api.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,11 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please type your email address here: tdekok@uw.edu\n"
+     ]
+    }
+   ],
    "source": [
-    "access_token = requests.get('https://tdekok-xbrlapi.builtwithdark.com/gettoken').text.replace('\"', \"\")"
+    "user_email = input(prompt=\"Please type your email address here: \")\n",
+    "access_token = requests.get('https://tdekok-xbrlapi.builtwithdark.com/gettoken?platform=aaa-{}'.format(user_email)).text.replace('\"', \"\")"
    ]
   },
   {
