--- a/xbrl_us_api.ipynb
+++ b/xbrl_us_api.ipynb
@@ -149,7 +149,8 @@
     "         'fact.id',\n",
     "         'report.filing-date',\n",
     "         'period.fiscal-year',\n",
-    "         'report.type',\n",
+    "         'period.instant',\n",
+    "         'report.document-type',\n",
     "         'concept.local-name',\n",
     "         'dimensions.count',\n",
     "         'dimension.local-name.sort(ASC)',\n",
@@ -223,7 +224,7 @@
    "outputs": [],
    "source": [
     "#years = ['2019'] ## Use commas between for multiple years, e.g., '2018','2019'\n",
-    "years = [str(2000 + i) for i in range(20)] ## Years 2000 to 2020"
+    "years = [str(2013 + i) for i in range(8)] ## Years 2013 to 2020"
    ]
   },
   {
@@ -266,13 +267,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: as of 2021 it appears that the `report.type` parameter is no longer supported. Updated to filter out the document types after the data has been retrieved."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -304,6 +298,7 @@
     "     'period.fiscal-year': ','.join(years),\n",
     "     'unit': 'USD',\n",
     "     'entity.cik': ','.join(companies_cik),\n",
+    "     'report.document-type': ','.join(report_types),\n",
     "     }  \n",
     "if has_dimensions == 'ALL':\n",
     "    dimension_options = ['TRUE', 'FALSE']\n",
@@ -327,9 +322,6 @@
     "        ## Get the results\n",
     "        ### Retrieve the data list\n",
     "        res_list = res_json['data']\n",
-    "        \n",
-    "        ### Keep only the request document types\n",
-    "        res_list = [result for result in res_list if result['report.type'] in report_types]\n",
     "        \n",
     "        ### Add to the results\n",
     "        all_res_list += res_list\n",
@@ -945,8 +937,8 @@
     }
    ],
    "source": [
-    "res_df[res_df['dimensions.count'] > 1].sort_values('dts.id')[['entity.name', 'dts.id', 'period.fiscal-year', \n",
-    "                                                              'report.type', 'concept.local-name','dimensions.count', 'fact.has-dimensions',\n",
+    "res_df[res_df['dimensions.count'] > 1].sort_values('dts.id')[['entity.name', 'dts.id', 'period.fiscal-year','period.instant',\n",
+    "                                                              'report.document-type', 'concept.local-name','dimensions.count', 'fact.has-dimensions',\n",
     "                                                             'dimension.local-name', 'member.local-name', 'fact.value', 'unit']].head(10)"
    ]
   }
@@ -967,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
