--- a/xbrl_us_api.ipynb
+++ b/xbrl_us_api.ipynb
@@ -117,7 +117,7 @@
     "                'client_secret' : login_cred['client_secret'], \n",
     "                'username' : login_cred['username'] ,\n",
     "                'password' : password,\n",
-    "                'platform' : 'pc'}\n",
+    "                'platform' : 'uw-ipynb'}\n",
     "    res = requests.post(endpoint_auth, data=body_auth)\n",
     "    auth_json = res.json()\n",
     "    access_token = auth_json['access_token']"
