--- a/xbrl_us_api.ipynb
+++ b/xbrl_us_api.ipynb
@@ -130,6 +130,9 @@
     "    if CREDENTIAL_TYPE == 'LOCAL':\n",
     "        with open('login_cred.json', 'r') as f:\n",
     "            login_cred = json.loads(f.read())\n",
+    "            client_id = login_cred['client_id']\n",
+    "            client_secret = login_cred['client_secret']\n",
+    "            username = login_cred['username']\n",
     "    else:\n",
     "        client_id = input(prompt='Please input your client id here:')\n",
     "        client_secret = getpass.getpass(prompt = 'Please input your client secret here:')\n",
@@ -138,9 +141,9 @@
     "    password = getpass.getpass(prompt = 'Password: ')\n",
     "    \n",
     "    body_auth = {'grant_type' : 'password', \n",
-    "                'client_id' : login_cred['client_id'], \n",
-    "                'client_secret' : login_cred['client_secret'], \n",
-    "                'username' : login_cred['username'] ,\n",
+    "                'client_id' : client_id, \n",
+    "                'client_secret' : client_secret, \n",
+    "                'username' : username,\n",
     "                'password' : password,\n",
     "                'platform' : 'uw-ipynb'}\n",
     "    res = requests.post(endpoint_auth, data=body_auth)\n",
